Improve keyboard navigation and fix button visibility
The changes focus on improving keyboard navigation and fixing button visibility in the todo components:

- Remove Tab key navigation in favor of arrow keys
- Hide action buttons except checkboxes when not focused
- Fix form tab order in inner focus mode
- Add section dialog to main layout
- Clean up database filters and queries

--- a/app/components/todo/todo.module.css
+++ b/app/components/todo/todo.module.css
@@ -73,7 +73,7 @@
     opacity: 1;
 }
 
-.todo > button:not([aria-haspopup="dialog"]) {
+.todo > button:not([aria-haspopup="dialog"], [role="checkbox"]) {
     opacity: 0;
     transition: opacity 75ms ease-in-out;
 }
